...
                android:minHeight="?attr/actionBarSize"
                android:touchscreenBlocksFocus="false"
                app:navigationContentDescription="@string/buttonClose"
                app:navigationIcon="@drawable/ic_close_big"
                app:title="@string/buttonNewMessage"
...

                    <com.infomaniak.mail.ui.newMessage.RecipientFieldView
                        android:id="@+id/toField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <com.infomaniak.mail.ui.newMessage.RecipientFieldView
                        android:id="@+id/ccField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <com.infomaniak.mail.ui.newMessage.RecipientFieldView
                        android:id="@+id/bccField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <com.infomaniak.mail.ui.newMessage.ComposeSubject
                        android:id="@+id/subjectTextField"
                        style="@style/EmailAddressTextView"
                        android:layout_width="0dp"
...

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/attachmentsRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <com.infomaniak.lib.richhtmleditor.RichHtmlEditorWebView
                        android:id="@+id/editorWebView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/autoCompleteTo"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
...

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/autoCompleteCc"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
...

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/autoCompleteBcc"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
...

                                <com.google.android.material.button.MaterialButton
                                    android:id="@+id/editorAttachment"
                                    style="@style/EditorIconButton"
                                    android:layout_width="@dimen/newMessageToolbarItemWidth"
...

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/sendButton"
                            style="@style/IconButton"
                            android:layout_width="@dimen/newMessageToolbarItemWidth"
...
