<?xml version="1.0" encoding="utf-8"?><!--
  ~ Infomaniak kMail - Android
  ~ Copyright (C) 2022 Infomaniak Network SA
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetEnd="0dp"
            app:navigationContentDescription="@string/contentDescriptionButtonMenu"
            app:navigationIcon="@drawable/ic_burger">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <include
                    android:id="@+id/searchViewCard"
                    layout="@layout/item_search_view"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/searchViewHeight"
                    android:layout_weight="1" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/userAvatar"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/iconButtonSize"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/marginStandard"
                    app:cardCornerRadius="@dimen/roundCornerRadius">

                    <ImageView
                        android:id="@+id/userAvatarImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/titleMyAccount"
                        android:src="@drawable/placeholder"
                        tools:src="@tools:sample/avatars" />

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/mailboxName"
        style="@style/H1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginLarge"
        android:layout_marginTop="@dimen/marginStandard"
        android:text="@string/inboxFolder"
        app:layout_constraintBottom_toTopOf="@id/swipeRefreshLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        tools:text="Boite de Reception" />

    <!-- TODO: Multiselect -->
    <!--        <com.google.android.material.button.MaterialButton-->
    <!--            android:id="@+id/openMultiselectButton"-->
    <!--            style="@style/TextButton"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="Modifier"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintTop_toBottomOf="@id/searchViewCard" />-->

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mailboxName">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/threadsList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/cardview_thread_item"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/illuNoMail"
                android:layout_width="@dimen/noMailIlluViewSize"
                android:layout_height="@dimen/noMailIlluViewSize"
                android:src="@drawable/ic_zero_mail"
                app:layout_constraintBottom_toTopOf="@id/noMailTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:tint="?android:attr/colorPrimary"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/noMailTitle"
                style="@style/H2"
                android:layout_width="@dimen/noMailTextViewSize"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginStandard"
                android:gravity="center"
                android:text="@string/noEmailTitle"
                app:layout_constraintBottom_toTopOf="@id/noMailDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/illuNoMail"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/noMailDescription"
                style="@style/Body.Secondary"
                android:layout_width="@dimen/noMailTextViewSize"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginStandardVerySmall"
                android:gravity="center"
                android:lineSpacingMultiplier="1"
                android:text="@string/noEmailDescription"
                app:layout_constraintBottom_toTopOf="@id/newMessageFab"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/noMailTitle"
                app:layout_constraintVertical_chainStyle="packed" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/noMailLayoutGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="illuNoMail,noMailTitle,noMailDescription"
                tools:visibility="gone" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/newMessageFab"
                style="@style/H3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/marginStandard"
                android:layout_marginBottom="@dimen/marginStandard"
                android:paddingHorizontal="18dp"
                android:text="@string/buttonNewMessage"
                android:textAllCaps="false"
                app:icon="@drawable/ic_pencil"
                app:iconGravity="end"
                app:iconSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
