...
    <string name="deleteFolderDialogTitle">Delete folder</string>
    <string name="disabledFeatureFlagDescription">You will soon be able to unlock the limits of your ik.me email address\n(storage limit, custom schedule, sending and more…)</string>
    <string name="disabledFeatureFlagTitle">Need more storage and features?</string>
    <string name="displayMailIssueDescription">To fix display problems, please update the Android System Webview application.</string>
    <string name="displayMailIssueTitle">Problem displaying your emails</string>
    <string name="downloadingEmailsTitle">Downloading %d emails</string>
    <string name="draftFolder">Drafts</string>
    <string name="draftPrefix">(Draft)</string>
    <string name="editSendDescription">This message will be moved to your drafts to be sent whenever you want.</string>
    <string name="editSendTitle">Edit Send</string>
    <string name="emailWithoutSubjectDescription">You are about to send a message without a subject. Do you want to continue?</string>
    <string name="emailWithoutSubjectTitle">Empty subject</string>
    <string name="emptyStateFolderDescription">There is nothing to see here.</string>
...
    <string name="googlePlayServicesAreRequired">Google Play Services are required</string>
    <string name="groupContactsTitle">Group: %s</string>
    <plurals name="hoursBeforeSendingReminder">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <string name="importFilesButton">Files</string>
    <string name="importPhotosButton">Photos</string>
    <string name="inboxFolder">Inbox</string>
    <string name="kSuiteProQuotasAlertDescription">Your Mail storage space is almost full. Upgrade to unlimited storage and unlock new features.</string>
    <string name="kSuiteProQuotasAlertFullDescription">Your Mail storage space is full. Upgrade to unlimited storage and unlock new features.</string>
    <string name="kSuiteProQuotasAlertFullTitle">Your Mail storage space is full</string>
    <string name="lastSelectedSchedule">Last selected schedule</string>
...
